keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: xconnected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      nodeSelector:
        kubernetes.io/hostname: "itmsmainindore"
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.3
          args:
          - start
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - name: keycloak-themes
              mountPath: /opt/keycloak/themes
            - name: keycloak-certs
              mountPath: /etc/x509/https/
            - name: keycloak-vault
              mountPath: /opt/vault/
      volumes:
        - name: keycloak-themes
          hostPath:
            path: /data/keycloak/themes
        - name: keycloak-certs
          hostPath:
            path: /data/keycloak/certs/
        - name: keycloak-vault
          hostPath:
            path: /data/keycloak/vault/
